<resources>
    <string name="app_name">Supergym</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="helplogin">¿Olvidaste la contraseña?</string>
    <string name="signup">REGISTRARSE</string>
    <string name="rpassword">Repetir contraseña</string>
    <string name="msghelp"><b>INGRESA TU EMAIL PARA RECUPERAR TU CONTRASEÑA</b></string>
    <string name="bsignup">REGISTRARSE</string>
    <string name="recover">Recuperar</string>
    <string name="infoperfil"><b>DENTRO DE SUPERGYM PODRAS EDITAR TODA LA INFO DE TU PERFIL!</b></string>
    <string name="register">REGISTRO COMPLETADO EXITOSAMENTE</string>
    <string name="goback">Volver</string>
    <string name="recoversend">Email enviado, revisa tu correo!</string>
    <string name="mensaje"><b>\"SOY MAS FUERTE QUE LAS EXCUSAS\"</b></string>
    <string name="relleno">descripcion</string>
    <string name="rutina">RUTINAS</string>
    <string name="perfil">PERFIL</string>
    <string name="ejercicios">EJERCICIOS</string>
    <string name="contacto">CONTACTO</string>
    <string name="pedirrutina">PEDIR RUTINA</string>
    <string name="hintpass">Hasta 8 caracteres</string>
    <string name="tokeninfo"><b>Ingresa el código de verificación que te enviamos</b></string>
    <string name="token">Token</string>
    <string name="validar">Validar</string>
    <string name="cancelar">CANCELAR</string>
    <string name="newpass">Nueva Contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="telefono">Telefono sin 0 ni 15</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="telefono2">Telefono</string>
    <string name="editar">Actualizar Info</string>
    <string name="reenviar">VOLVER A ENVIAR</string>
    <string name="cliente">Cliente</string>
    <string name="entrenador">Entrenador</string>
   <string name="mensaje_sin_rutina">No tienes activo un programa de\nentrenamiento\n¡Solicitalo a tu entrenador!</string>
    <string name="titulo_main">¡Hola Usuario!</string>
    <string name="subtitulo_main">Descubre Nuestros\nEntrenadores</string>
    <string name="solicitar">solicitar</string>
    <string name="descipcion">Hola mi nombre es Ejemplo\nEdad:30\nExperiencia: 5 años\nIG: marcos_trainer\nWP: 381957624</string>
    <string name="perfiltitulo">Datos del Perfil</string>
    <string name="datosnombre">Nombre</string>
    <string name="datosapellido">Apellido</string>
    <string name="datostelefono">Teléfono</string>
    <string name="datosobjetivo">Objetivo</string>
    <string name="datospeso">Peso (kg)</string>
    <string name="datosaltura">Altura (m)</string>
    <string name="botonguardar">Guardar</string>
    <string name="botoneditar">Editar</string>
</resources>