<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu">

    <ImageView
        android:id="@+id/iamgeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo4"
        tools:layout_editor_absoluteX="-48dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="98dp"
        android:layout_height="106dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono" />

    <Button
        android:id="@+id/botoncontacto"
        android:layout_width="163dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/blue_200"
        android:text="@string/contacto"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonejercicios" />

    <Button
        android:id="@+id/botonperfil"
        android:layout_width="163dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/blue_200"
        android:text="@string/perfil"
        android:textColor="@color/white"

        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/botonrutinas"
        android:layout_width="163dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/blue_200"
        android:text="@string/rutina"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonperfil" />

    <Button
        android:id="@+id/botonejercicios"
        android:layout_width="163dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/blue_200"
        android:text="@string/ejercicios"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonrutinas" />


</androidx.constraintlayout.widget.ConstraintLayout>