<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black_500"
    android:orientation="vertical"
    tools:context=".Signup">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="109dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="150dp"
        android:scaleType="center"
        app:cardCornerRadius="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/imagen_perfil" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutlocal2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/blue_500"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/blue_500"
        app:endIconDrawable="@drawable/ic_email"
        app:endIconMode="custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.061"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue_500"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/blue_500" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutlocal3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/blue_500"
        app:boxStrokeColor="@color/blue_200"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutlocal2"
        app:layout_constraintVertical_bias="0.019"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/blue_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue_500"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/blue_200" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutlocal4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/blue_500"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/blue_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutlocal3"
        app:layout_constraintVertical_bias="0.036"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/blue_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue_500"
            android:ems="10"
            android:hint="@string/rpassword"
            android:inputType="textPassword"
            android:textColor="@color/blue_200" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonregistro"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="@color/blue_500"
        android:text="@string/bsignup"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/buttoncancelar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/cancelar"
        android:textColor="@color/blue_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutlocal5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/blue_500"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="@color/blue_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutlocal4"
        app:layout_constraintVertical_bias="0.075">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/blue_500"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="number"
            android:textColor="@color/blue_200" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="43dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonregistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutlocal5">

        <RadioButton
            android:id="@+id/radio_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue_500"
            android:onClick="onRadioButtonClicked"
            android:text="@string/cliente"
            android:textColor="@color/blue_500"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_entrenador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:buttonTint="@color/blue_500"
            android:onClick="onRadioButtonClicked"
            android:text="@string/entrenador"
            android:textColor="@color/blue_500"
            android:textSize="16sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>