<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".Passwordedit">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="195dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutlocal"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="252dp"
        android:layout_height="61dp"
        android:layout_margin="10dp"
        android:textColorHint="@color/blue_500"
        app:boxStrokeColor="@color/blue_200"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/blue_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.13">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextpass"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_500"
            android:ems="10"
            android:hint="@string/newpass"
            android:inputType="textPassword"
            android:textColor="@color/blue_200" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutlocal2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="252dp"
        android:layout_height="61dp"
        android:layout_margin="10dp"
        android:textColorHint="@color/blue_500"
        app:boxStrokeColor="@color/blue_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutlocal"
        app:layout_constraintVertical_bias="0.145"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/blue_500">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextrpass"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_500"
            android:ems="10"
            android:hint="@string/rpassword"
            android:inputType="textPassword"
            android:textColor="@color/blue_200" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonaceptar"
        android:layout_width="252dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/blue_200"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutlocal2"
        app:layout_constraintVertical_bias="0.157" />


</androidx.constraintlayout.widget.ConstraintLayout>